# senpai

./: .devcontainer.json  .experiment  .gitignore  .mcp.json  .phase3  .phase3r10  .phase3r11  .phase3r12  .phase3r3  .phase3r3b  .phase3r4  .phase3r5  .phase3r6  .phase3r7  .phase3r7b  .phase3r8  .phase3r8b  .phase3r9  BASELINE.md  CLAUDE.md  CONTRIBUTING.md  DATASET_REPORT.md  Dockerfile  ORCHESTRATOR.md  README.md  advisor.md  check_pr2217_runs.py  download-pickles-job.yaml  explore_tandemfoil.py  explore_tandemfoil2.py  fetch_geps_tta_runs.py  fetch_geps_v2.py  fetch_geps_v3.py  fetch_geps_v4.py  fetch_pr2166_final.py  fetch_pr2166_runs.py  fetch_pr2177_metrics.py  fetch_pr2187_metrics.py  fetch_pr2187_metrics2.py  fetch_pr2201_metrics.py  (+45 more)
.claude/: settings.json
.devcontainer/: pod-template.yaml  setup.sh
cfd_tandemfoil/: ensemble_eval.py  eval_ensemble.py  generate_neuralfoil_data.py  make_soup.py  model_soup.py  panel_cp_cache.npz  precompute_ensemble.py  precompute_lap_pe.py  precompute_soft_labels.py  program.md  run_ensemble_eval.py  run_model_soup.py  run_sweep.sh  soup.py  train.py  weight_opt.py
data/: README.md  prepare_multi.py  split.py  split_manifest.json  split_stats.json  utils.py
instructions/: CLAUDE-ADVISOR.md  CLAUDE-STUDENT.md  phase_3_noam_results_2026-03-21 copy.md  prompt-advisor.md  prompt-student.md
k8s/: Dockerfile  advisor-deployment.yaml  advisor-pod.yaml  agent-job.yaml  entrypoint-advisor.sh  entrypoint-orchestrator.sh  entrypoint-student.sh  entrypoint.sh  install-weave-cc-plugin.sh  launch.py  orchestrator-pod.yaml  (+5 more)
(+209 files in other folders)
