# SPDX-FileCopyrightText: 2026 CoreWeave, Inc.
# SPDX-License-Identifier: Apache-2.0
# SPDX-PackageName: senpai

[project]
name = "senpai"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torch_geometric",
    "einops",
    "timm",
    "rich",
    "python-dotenv",
    "simple-parsing",
    "wandb",
    "weave",
    "tqdm",
    "matplotlib",
]

[tool.setuptools.packages.find]
exclude = ["k8s*", "instructions*"]

[project.optional-dependencies]
dev = [
    "ipython",
    "jupyter",
]
